--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -274,7 +274,7 @@
           </div>
 
           <!-- تبديل الثيم -->
-          <button class="btn btn-ghost btn-sm" id="themeToggle" title="تبديل الثيم">
+          <button class="btn btn-ghost btn-sm" id="themeToggle" >
             <i class="bi bi-sun-fill d-none" id="sunIcon"></i>
             <i class="bi bi-moon-stars-fill" id="moonIcon"></i>
           </button>
